# Lab5

./: CMakeLists.txt
lab5/: CMakeLists.txt  lab5.cpp  lab5.h
